log/build_2023-11-23_11-49-44/mypkg/stderr.log
  File "/home/atsushi8-ss/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 10
    if request.name == "山口敦志"
                            ^
SyntaxError: invalid syntax

